fix: add error handling